Fix jumping dot in center nav pages

--- a/wp-content/themes/Revera/theme.css
+++ b/wp-content/themes/Revera/theme.css
@@ -1084,7 +1084,8 @@ h3.bothead{
 }
 
 .left-nav-menu span a,
-span.left-nav-selected-child a{
+span.left-nav-selected-child a,
+span.center-nav-selected-child a{
 	position: relative;	
 }
 
